<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Herramienta Censador</string>
    <!--  Copyrigth  -->
    <string name="copyrightNotice">© 2026 \n\nNelson Andrés Acuña Cambronero. \n\nTodos los derechos reservados.</string>
    <string name="camposNulos"> *-*-*-*</string>
    <string name="camposObligatorios"> Este campo es obligatorio</string>
    <string name="logoApp"> Logo de la aplicación</string>

    <!--  Menú del activity main  -->
    <string name="am_op1"> 1. Nueva visita</string>
    <string name="am_op2"> 2. Bitácora de visitas</string>
    <string name="am_op3"> 3. Exportar imágenes</string>
    <string name="tituloVersion">"Versión: "</string>
    <string name="tituloNuevaVisita">Nueva visita</string>

    <!--  Formulario de nueva visita  -->
    <string name="titPais"> País</string>
    <string name="titProspectorComercial"> Prospector encargado</string>
    <string name="titTipoCliente"> Tipo de cliente</string>
    <string name="titNombreComercial"> Nombre comercial</string>
    <string name="titNombreCompleto"> Nombre completo cliente</string>
    <string name="titTipoIdentificacion"> Tipo de identificación</string>
    <string name="titNumIndentificacion"> Número de indentificación</string>
    <string name="titCoordeDireccion"> Dirección en coordenadas</string>
    <string name="titClasNegocio"> Clasificación de negocio</string>
    <string name="titTelefono"> Teléfono de contacto</string>
    <string name="titLinkGoogleMaps"> Link Google Maps</string>
    <string name="titModulo"> Módulo</string>
    <string name="titFotoNegocio"> Foto del negocio</string>
    <string name="titDiaVisita"> Día de visita</string>
    <string name="titApoyoSupervisor"> ¿Solicita apoyo de supervisor?</string>
    <string name="titFecha"> Fecha coordinada</string>
    <string name="titVenta"> ¿Es cliente con venta?</string>
    <string name="titClienteNuevo"> ¿Es cliente nuevo?</string>
    <string name="titClienteCodigo"> ¿El cliente ya tiene código?</string>

    <!--Botones-->
    <string name="btnGuardar"> Guardar</string>
    <string name="btnGenerar"> Generar</string>
    <string name="btnObtener"> Obtener</string>
    <string name="foto_comercio">Foto del comercio</string>
    <string name="ruta_de_la_foto">Ruta de la foto</string>
    <string name="tomar_foto_del_comercio">Tomar foto del comercio</string>
    <string name="nombre_comercial">Nombre Comercial</string>
    <string name="cliente">Cliente</string>
    <string name="telefono">Teléfono</string>
    <string name="dia_visita">Día Visita</string>
    <string name="lat_lng">Lat,Long</string>
    <string name="btnMaps">Ver en Maps</string>
    <string name="opciones_de_visita">opciones de visita</string>
    <string name="number_1">1.</string>
    <string name="editar_registro">Editar registro</string>
    <string name="borrar_registro">Borrar registro</string>
    <string name="enviar_whatsapp">Enviar WhatsApp</string>
    <string name="ver_en_maps">Ver en el Mapa</string>
    <string name="hoy">Hoy</string>
    <string name="fecha">Fecha</string>
    <string name="mes">Mes</string>
    <string name="ano">Año</string>
    <string name="todo">Todo</string>
    <string name="exportar_excel">Exportar Excel</string>
    <string name="copiar_informacion">Copiar información</string>
    <string name="compartir">Compartir</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="visitar_ubicacion">Visitar ubicación</string>
    <string name="galeria">Galería</string>
    <string name="actualizar">Actualizar</string>
    <string name="sync">Sincronizar</string>

    <!-- Seguimientos -->
    <string name="registrar_seguimiento">Registrar seguimiento</string>
    <string name="comentarios">Comentarios</string>
    <string name="seleccionar_estado_venta">Seleccionar estado de venta</string>
    <string name="titulo_seguimiento">Seguimiento de Visita</string>
    <string name="datos_cliente">Datos del Cliente</string>
    <string name="buscar_por_nombre">Buscar por nombre...</string>
    <string name="fecha_no_requerida">00/00/0000</string>
    <string name="subir_datos_sync">Subir datos (Sync)</string>
    <string name="descargar_datos">Descargar datos</string>
    <string name="lista_de_visitas">Lista de Visitas</string>
    <string name="forzar_sincronizacion_completa">Forzar sincronización completa</string>
    <string name="altas">Altas</string>
    <string name="observaciones_del_seguimiento">Observaciones del seguimiento</string>
    <string name="estado_de_venta">Estado de Venta</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="evidencia_fotografica">Evidencia Fotográfica</string>
    <string name="nombre_cliente">Nombre cliente</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="seguimientos">Seguimientos</string>
    <string name="cant_seguimientos">Seguimientos:</string>
    <string name="seguimientos_0">Seguimientos: 0</string>

    <!-- Spinner: Días de la semana -->
    <string-array name="diaSemana">
        <item>Seleccionar</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>

    <!-- Spinner: Nombre de los paises -->
    <string-array name="nombPaises">
        <item>Seleccionar</item>
        <item>Costa Rica</item>
        <item>Panamá</item>
    </string-array>

    <!-- Spinner: Elección de sí o no -->
    <string-array name="opcSiNo">
        <item>Seleccionar</item>
        <item>Sí</item>
        <item>No</item>
    </string-array>

    <!-- Spinner: Tipo de documento de identificación -->
    <string-array name="tipoIdentificacion">
        <item>Seleccionar</item>
        <item>Cédula Nacional</item>
        <item>Cédula Jurídica</item>
        <item>Cédula de Residencia</item>
        <item>Número de Pasaporte</item>
        <item>NITE</item> <!--NITE (Número Interno de Tributación Especial)-->
    </string-array>

    <!-- Spinner: Tipo de cliente -->
    <string-array name="tipoCliente">
        <item>Seleccionar</item>
        <item>Natural</item>
        <item>Jurídico</item>
    </string-array>

    <!-- Spinner: Nombre de Censadores -->
    <string-array name="nombCensadores">
        <item>Seleccionar</item>
        <item>Nelson Andrés Acuña Cambronero</item>
        <item>Erick Sánchez</item>
        <item>Jesús Jiménez</item>
        <item>Maria de los Ángeles</item>
        <item>Pablo Abab</item>
        <item>Jerson Mora</item>
        <item>Eduardo Ramírez</item>
        <item>92204 - Anneth del Cármen Villarreal C</item>
        <item>89686 - Ignacio Coparropa Pérez</item>
        <item>91673 - Luis Aguilar Caballero</item>
        <item>92312 - Jean Aldair Brokamp Quiñones</item>
        <item>Jender Gerardo Calvo Álvarez</item>
        <item>Pedro Josué Argüello Larios</item>
        <item>Francisco Armando Aguilar Vasconcelo</item>
        <item>Rodrigo Agüero Cerdas</item>
        <item>Wiston Cornejo</item>
        <item>Joel Ruíz</item>
        <item>Pedro Morales Cubillo</item>
    </string-array>

    <!-- Spinner: Giro de Negocio -->
    <string-array name="tipoComercio">
        <item>Seleccionar</item>
        <item>Supermercado</item>
        <item>Minisúper</item>
        <item>Minisúper/Licorera</item>
        <item>Minisúper/Carnicería</item>
        <item>Pulpería</item>
        <item>Restaurante</item>
        <item>Soda</item>
        <item>Comida rápida</item>
        <item>Comida china</item>
        <item>Cevichera</item>
        <item>Pizzería</item>
        <item>Food Truck</item>
        <item>Carnicería/Pescadería</item>
        <item>Verdulería/Frutería</item>
        <item>Heladería</item>
        <item>Bar</item>
        <item>Bar/Restaurante</item>
        <item>Panadería/Pastelería</item>
        <item>Panadería/Soda</item>
        <item>Gimnasio</item>
        <item>Ferretería</item>
        <item>Farmacia</item>
        <item>Hotel</item>
        <item>Cabinas</item>
        <item>Librería/Papelería</item>
        <item>Taller mecánico</item>
        <item>Bazar</item>
        <item>Tienda por departamentos</item>
    </string-array>

</resources>