<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <!-- Imagen del negocio -->

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/btnObtener"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"/>

        <!-- Información -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreComercial"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/nombre_comercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtCliente"
                android:text="@string/cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtTelefono"
                android:text="@string/tel_fono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtDiaVisita"
                android:text="@string/dia_visita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtCoordenadas"
                android:text="@string/lat_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnMaps"
                android:text="@string/btnMaps"
                android:layout_marginTop="5dp"
                android:minHeight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>