<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 🔥 TOOLBAR (CLAVE) -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/listaVisitas_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/toolbarColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/lista_de_visitas"
        app:titleTextColor="@color/white" />

    <!-- Filtros -->
    <HorizontalScrollView
        android:id="@+id/scrollFiltros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listaVisitas_toolbar">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="5dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHoy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/hoy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFecha"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/fecha" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMes"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/mes" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAnio"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/ano" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTodo"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/todo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAltas"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altas" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSeguimientos"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seguimientos" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <!-- Buscador -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBuscar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/buscar_por_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollFiltros">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Lista -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerVisitas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>